[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu/options_menu/options_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/options_menu/option_pages/display_options.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://menu/options_menu/option_pages/graphics_options.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/options_menu/option_pages/dev_options.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/options_menu/option_pages/game_options.tscn" type="PackedScene" id=6]
[ext_resource path="res://menu/options_menu/option_pages/sound_options.tscn" type="PackedScene" id=7]
[ext_resource path="res://menu/background/smoke_background.tres" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.000244141
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_left = 0.025
anchor_top = 0.075
anchor_right = 0.975
anchor_bottom = 0.925
margin_left = 7.62939e-06
margin_top = 3.8147e-06
margin_right = 0.000244141
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 1818.0
margin_bottom = 1836.0
size_flags_horizontal = 3

[node name="categories_scroll" type="ScrollContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 1818.0
margin_bottom = 1553.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="categories" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/categories_scroll"]
margin_right = 480.0
margin_bottom = 1553.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="game_category" type="Label" parent="HSplitContainer/VBoxContainer/categories_scroll/categories"]
margin_right = 480.0
margin_bottom = 127.0
focus_neighbour_top = NodePath("../../../back_category")
focus_neighbour_right = NodePath("../../../../option_view/game_options")
focus_neighbour_bottom = NodePath("../display_category")
mouse_filter = 1
text = "> Game"

[node name="display_category" type="Label" parent="HSplitContainer/VBoxContainer/categories_scroll/categories"]
margin_top = 277.0
margin_right = 480.0
margin_bottom = 404.0
focus_neighbour_top = NodePath("../game_category")
focus_neighbour_right = NodePath("../../../../option_view/display_options")
focus_neighbour_bottom = NodePath("../graphics_category")
mouse_filter = 1
text = "> Display"

[node name="graphics_category" type="Label" parent="HSplitContainer/VBoxContainer/categories_scroll/categories"]
margin_top = 554.0
margin_right = 480.0
margin_bottom = 681.0
focus_neighbour_top = NodePath("../display_category")
focus_neighbour_right = NodePath("../../../../option_view/graphics_options")
focus_neighbour_bottom = NodePath("../sound_category")
mouse_filter = 1
text = "> Graphics"

[node name="sound_category" type="Label" parent="HSplitContainer/VBoxContainer/categories_scroll/categories"]
margin_top = 831.0
margin_right = 480.0
margin_bottom = 958.0
focus_neighbour_top = NodePath("../graphics_category")
focus_neighbour_right = NodePath("../../../../option_view/sound_options2")
focus_neighbour_bottom = NodePath("../dev_category")
mouse_filter = 1
text = "> Sound"

[node name="dev_category" type="Label" parent="HSplitContainer/VBoxContainer/categories_scroll/categories"]
margin_top = 1108.0
margin_right = 480.0
margin_bottom = 1235.0
focus_neighbour_top = NodePath("../sound_category")
focus_neighbour_right = NodePath("../../../../option_view/dev_options")
focus_neighbour_bottom = NodePath("../../../back_category")
mouse_filter = 1
text = "> Dev"

[node name="back_category" type="Button" parent="HSplitContainer/VBoxContainer"]
margin_top = 1703.0
margin_right = 1818.0
margin_bottom = 1836.0
mouse_filter = 1
text = "< Back"
flat = true
align = 0

[node name="option_view" type="TabContainer" parent="HSplitContainer"]
margin_left = 1830.0
margin_right = 3648.0
margin_bottom = 1836.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
tab_align = 0
tabs_visible = false

[node name="game_options" parent="HSplitContainer/option_view" instance=ExtResource( 6 )]
anchor_right = 1.0

[node name="display_options" parent="HSplitContainer/option_view" instance=ExtResource( 2 )]
visible = false
anchor_right = 1.0
margin_right = 0.0

[node name="graphics_options" parent="HSplitContainer/option_view" instance=ExtResource( 4 )]
visible = false
anchor_right = 1.0

[node name="sound_options" parent="HSplitContainer/option_view" instance=ExtResource( 7 )]
visible = false
anchor_right = 1.0
margin_right = 0.0

[node name="dev_options" parent="HSplitContainer/option_view" instance=ExtResource( 5 )]
visible = false
anchor_right = 1.0
[connection signal="mouse_entered" from="HSplitContainer/VBoxContainer/categories_scroll/categories/game_category" to="HSplitContainer/VBoxContainer/categories_scroll/categories" method="_on_game_category_mouse_entered"]
[connection signal="mouse_entered" from="HSplitContainer/VBoxContainer/categories_scroll/categories/display_category" to="HSplitContainer/VBoxContainer/categories_scroll/categories" method="_on_display_category_mouse_entered"]
[connection signal="mouse_entered" from="HSplitContainer/VBoxContainer/categories_scroll/categories/graphics_category" to="HSplitContainer/VBoxContainer/categories_scroll/categories" method="_on_graphics_category_mouse_entered"]
[connection signal="mouse_entered" from="HSplitContainer/VBoxContainer/categories_scroll/categories/sound_category" to="HSplitContainer/VBoxContainer/categories_scroll/categories" method="_on_sound_category_mouse_entered"]
[connection signal="mouse_entered" from="HSplitContainer/VBoxContainer/categories_scroll/categories/dev_category" to="HSplitContainer/VBoxContainer/categories_scroll/categories" method="_on_dev_category_mouse_entered"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/back_category" to="HSplitContainer/VBoxContainer/categories_scroll/categories" method="_on_back_category_pressed"]
